# Machine-Learning-Projects-for-Certification

./: Copy_of_fcc_book_recommendation_knn.ipynb  Copy_of_fcc_predict_health_costs_with_regression.ipynb  Copy_of_fcc_sms_text_classification.ipynb  README.md  RPS.py  pyproject.toml  replit_zip_error_log.txt
