[tool.poetry]
name = "repl_nix_boilerplate-rock-paper-scissors"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.11.0"
tensorflow-probability = "0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
